# sbor

./: CMakeLists.txt  LICENSE  README.md  install.ps1  install.sh  release.sh  sha256_get.sh
src/: main.c
src/commands/: add.c  build.c  clean.c  init.c  remove.c  run.c  stubs.c
src/core/: templates.c  utils.c
src/include/: commands.h
tests/hello_world/: CMakeLists.txt  sbor.conf
tests/testing_add_remove/: CMakeLists.txt  README.md  sbor.conf
tests/testing_add_remove/src/: include.h
tests/testing_build/: CMakeLists.txt  README.md  sbor.conf
tests/testing_clean/: CMakeLists.txt  README.md  sbor.conf
tests/testing_clean/src/: main.c
tests/testing_run/: .gitignore  CMakeLists.txt  README.md  sbor.conf
